app/styles/main.css
/* Icons */

@-moz-keyframes spin {
  from { -moz-transform: rotate(0deg); }
  to { -moz-transform: rotate(360deg); }
}
@-webkit-keyframes spin {
  from { -webkit-transform: rotate(0deg); }
  to { -webkit-transform: rotate(360deg); }
}
@keyframes spin {
  from { transform:rotate(0deg); }
  to { transform:rotate(360deg); }
}

.glyphicon-spin {
  /*-moz-animation: spin 2s infinite linear;
  -o-animation: spin 2s infinite linear;
  -webkit-animation: spin 2s infinite linear;
  animation: spin 2s infinite linear;*/
}

/* Global Bootstrap overrides and addons */

.form-control,
.input-lg,
.btn,
.alert,
.breadcrumb,
.dropdown-menu,
.modal-content,
.btn-group-lg > .btn,
.list-group-item:first-child,
.list-group-item:last-child {
  border-radius: 0;
}

.alert {
  border: 0;
  padding: 15px 20px;
}

.breadcrumb li.pull-right:before {
  display: none;
}

/* ngAnimate modals */
.modal-backdrop.am-fade {
  opacity: .5;
  transition: opacity .15s linear;
}
.modal-backdrop.am-fade.ng-enter {
  opacity: 0;
}
.modal-backdrop.am-fade.ng-enter-active {
  opacity: .5;
}
.modal-backdrop.am-fade.ng-leave {
  opacity: .5;
}
.modal-backdrop.am-fade.ng-leave-active {
  opacity: 0;
}

.text-capitals {
  text-transform: capitalize;
}

/* Layout, header, footer */

html {
  position: relative;
  min-height: 100%;
}

body {
  margin: 0 0 120px; /* bottom = footer height */
}

.page-header {
  margin: 0;
  padding: 15px 0;
}

.page-header .navbar-brand {
  padding: 0;
  padding-left: 30px;
  margin-top: 4px;
}

.page-container {
  padding-top: 20px;
}

.page-content {
}

.page-footer {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  height: 100px;
  padding: 30px 0;
}

/* Feedback button & modal */

.btn-feedback {
  position: fixed; bottom: 0%; left: 4%;
  border-bottom-width: 0;
}

@media all and (min-width: 1024px) {
  .btn-feedback {
    bottom: auto; bottom: 30%; left: 0%;
    border-bottom-width: 1px;
    border-top-width: 0;

    /* Rotate and stick to the left, translateY =~ width */
    -webkit-transform: translateY(100px) rotate(-90deg);
    -moz-transform: translateY(100px) rotate(-90deg);
    -o-transform: translateY(100px) rotate(-90deg);
    -ms-transform: translateY(100px) rotate(-90deg);
    transform: translateY(100px) rotate(-90deg);
    -webkit-transform-origin: top left;
    -moz-transform-origin: top left;
    -o-transform-origin: top left;
    -ms-transform-origin: top left;
    transform-origin: top left;
  }
}

/* Device nav */

.nav-devices .active {
  background: rgba(66, 139, 202, 0.1);
}

.dev-status {
  float: right;
}

.dev-status.dev-status-loading {
  opacity: 1.0;
}

.dev-status.dev-status-connected {
  opacity: 0.5;
}

.dev-status.dev-status-disconnected {
  opacity: 0;
}

.dev-status .glyphicon {
  height: 20px;
  margin-top: -2px;
}

.dev-acc-info {
  white-space: nowrap;
}

.nav-devices-accounts {
  margin-bottom: 10px;
}

/* Transaction list */

.txlist thead th {
  font-size: 85%;
  font-weight: normal;
  border-bottom: none !important;
  padding: 4px 8px !important;
}

.txlist thead th.txlist-header-address {
  padding-left: 26px !important;
}

.txlist-tx {
  cursor: pointer;
}

.table-hover .txlist-detail:hover td {
  background: transparent !important;
}

.txlist-detail {
}

.txlist-detail dl {
  margin-bottom: 0;
}

.txlist-detail td {
  padding: 10px 12px !important;
}

.txlist-detail dt {
  font-weight: normal;
  opacity: 0.5;
}

.txlist-hash {
  font-family: monospace;
}

/* Device send/receive nav */

.nav-sendrecv {
}

.nav-sendrecv-active .btn {
  opacity: 0.5;
}

.nav-sendrecv-active .btn.active {
}

/* Receive */

.address-list .badge {
  opacity: 0.5;
}

/* Send */

.qrscan-video {
  display: block;
  width: 100%;
}

.qrscan-cancel {
  position: absolute;
  bottom: 10px;
  right: 25px; /* 10px + 15px of col padding */
}

.qrscan-col .qrscan-cancel {
  visibility: hidden;
}

.qrscan-col:hover .qrscan-cancel {
  visibility: visible;
}

.txaddress-qrscan {
  position: absolute;
  font-size: 18px;
  right: 22px;
  top: 8px;
}

.txpreview {
  font-size: 10px;
  word-wrap: break-word;
}

/* Device setup */

.devsetup-strength {
  margin-top: 10px;
}

.devsetup-strength-label {
  display: block;
  text-transform: uppercase;
  font-size: 10px;
}

/* PIN modal */

.pinmodal .modal-body .form-group {
  margin-left: 0;
  margin-right: 0;
  margin-bottom: 10px;
}

.pinmodal .modal-body .col-sm-4 {
  padding-left: 5px;
  padding-right: 5px;
}

.pinmodal .modal-body {
  padding-bottom: 0;
}

.pinmodal .modal-footer {
  margin-top: 0;
}

